--- a/src/App.css
+++ b/src/App.css
@@ -376,6 +376,19 @@ table th {
   margin-right: 0.6rem;
 }
 
+/* About */
+.about {
+  color: var(--primary-color);
+}
+
+.description {
+  color: var(--dark-color);
+}
+
+.version {
+  color: var(--success-color);
+}
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .hide-sm {
